# INTEGRATE_calibration_cuts_module_TO_SNCuts

./: CMakeLists.txt  README.md  SNCutsPipeline.conf.in  install_test.sh
include/: CDBank.hh  CDHit.hh  Constants.hh  Event.hh  Filters.hh  PTDParticle.hh  SDParticle.hh  SNCuts.hh
lib/: CDBankdict_rdict.pcm  CDHitdict_rdict.pcm  Constantsdict_rdict.pcm  Eventdict_rdict.pcm  Filtersdict_rdict.pcm  PTDParticledict_rdict.pcm  SDParticledict_rdict.pcm
scripts_for_testing/: pipeline.conf  reco.conf  send.sh  simu_setup.conf  slurm-1116690.out
src/: CDBank.cpp  CDHit.cpp  Event.cpp  Filters.cpp  PTDParticle.cpp  SDParticle.cpp  SNCuts.cpp
src/dicts/: CDBankdict.cpp  CDHitdict.cpp  Constantsdict.cpp  Eventdict.cpp  Filtersdict.cpp  PTDParticledict.cpp  SDParticledict.cpp
test/: 2nubb.profile  pipeline.conf  rec.conf  send.sh  simu_cut1_test.profile  simu_cut1_test_kink_track_truefalse_cut_1.brio  slurm-1850929.out
test/for_real/: p_MiModule_v00.conf  pipeline.conf  reco.conf  simu.conf
test/for_simulated/: 2nubb.conf  simu.profile  simu_setup.conf
test_reconstruct_falaise_txt_coordinates/: _tmp_simu.profile  pipeline.conf  send.sh
